[gd_scene load_steps=16 format=2]

[ext_resource path="res://Graphics/Abilities/body0000.png" type="Texture" id=1]
[ext_resource path="res://Graphics/glowpart0000.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Abilities/wingmid0000.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Abilities/wingtip0000.png" type="Texture" id=4]
[ext_resource path="res://Abilities/MoonCrane.gd" type="Script" id=5]
[ext_resource path="res://Sounds/Flap1.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Flap2.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Flap3.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Flap4.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/LanternPop.wav" type="AudioStream" id=10]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.374302, 0.703911, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.843137, 0.843137, 0.843137, 0.184314, 0.843137, 0.843137, 0.843137, 0.184314, 1, 1, 1, 0 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.490099, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=5]
resource_name = "Die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Crane:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 2.54912 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Kill")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "Flap"
length = 1.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Crane/Body/Mid/Tip:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1.51, 0.45, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crane/Body/Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1.51, 0.45, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crane:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.5 ),
"transitions": PoolRealArray( 1.56917, 1.41421, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Crane/Body/Mid:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.53, 0.98, 1.01, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.48 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_random_flap"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Crane/Body/Mid/Tip:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crane/Body/Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crane:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Crane/Body/Mid:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Crane:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="MoonCrane" type="Node2D"]
script = ExtResource( 5 )

[node name="Crane" type="Node2D" parent="."]
rotation = -1.24501

[node name="Body" type="Sprite" parent="Crane"]
texture = ExtResource( 1 )

[node name="Mid" type="Sprite" parent="Crane/Body"]
visible = false
position = Vector2( -10.0247, 23.4415 )
texture = ExtResource( 3 )
offset = Vector2( 8.7108, -23.6832 )

[node name="Tip" type="Sprite" parent="Crane/Body/Mid"]
position = Vector2( 0.278203, -23.1176 )
texture = ExtResource( 4 )
offset = Vector2( 8.24855, 0.70986 )

[node name="Glow" type="CPUParticles2D" parent="Crane"]
position = Vector2( -35.3738, 10.8947 )
rotation = 2.34243
amount = 6
lifetime = 2.0
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 1 )
gravity = Vector2( 0, 3 )
angle = 720.0
angle_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.02
color_ramp = SubResource( 3 )

[node name="Sparkle" type="CPUParticles2D" parent="Crane"]
position = Vector2( -35.3738, 10.8947 )
rotation = 2.34243
amount = 30
lifetime = 5.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 30, 1 )
gravity = Vector2( 0, 1 )
angular_velocity = 720.0
angular_velocity_random = 1.0
angle = 720.0
angle_random = 1.0
scale_amount = 4.0
scale_amount_random = 0.02
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 3 )

[node name="Flap" type="AnimationPlayer" parent="."]
autoplay = "Flap"
anims/Die = SubResource( 5 )
anims/Flap = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Flap1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -8.739
bus = "Quiet Things"

[node name="Flap2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -8.739
bus = "Quiet Things"

[node name="Flap3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -8.739
bus = "Quiet Things"

[node name="Flap4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -8.739
bus = "Quiet Things"

[node name="Kill" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
pitch_scale = 1.5
bus = "Explosions"

[connection signal="animation_finished" from="Flap" to="." method="_on_Flap_animation_finished"]
